--- a/src/main/resources/FXMLShop.fxml
+++ b/src/main/resources/FXMLShop.fxml
@@ -1,13 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="view.FXML_Shop_Controller">
+   <children>
+      <GridPane prefHeight="400.0" prefWidth="608.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="551.0" minWidth="10.0" prefWidth="456.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.0" minWidth="10.0" prefWidth="152.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="267.0" minHeight="10.0" prefHeight="111.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="289.0" minHeight="0.0" prefHeight="289.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="76.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <JFXButton fx:id="btn_goods" layoutX="14.0" layoutY="14.0" onAction="#OnActionBtn_goods" prefHeight="25.0" prefWidth="71.0" style="-fx-border-color: #000000;" text="Товари">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXTextField fx:id="fld_search" alignment="CENTER" layoutX="31.0" layoutY="66.0" maxWidth="395.0" minWidth="240.0" onAction="#OnActionFld_search" prefHeight="31.0" prefWidth="395.0" />
+               </children>
+            </AnchorPane>
+            <JFXListView fx:id="lv_info" prefHeight="289.0" prefWidth="291.0" GridPane.rowIndex="1" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+               <children>
+                  <Label alignment="CENTER" layoutY="8.0" prefHeight="31.0" prefWidth="132.0" text="Сортування за ціною" textAlignment="CENTER">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+                  <JFXRadioButton fx:id="rb_up" layoutX="14.0" layoutY="39.0" onAction="#OnActionRB_up" text="↑" />
+                  <JFXRadioButton fx:id="rb_down" layoutX="14.0" layoutY="64.0" onAction="#OnActionRB_down" text="↓" />
+               </children>
+            </AnchorPane>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <JFXComboBox fx:id="cb_search" layoutY="2.0" onAction="#OnActionCB_search" prefHeight="25.0" prefWidth="152.0" promptText="Виберіть категорію" />
+               </children>
+            </AnchorPane>
+         </children>
+      </GridPane>
+   </children>
 </AnchorPane>
