--- a/src/main/resources/FXMLShop.fxml
+++ b/src/main/resources/FXMLShop.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXRadioButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="560.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXML_Shop_Controller">
+<AnchorPane prefHeight="560.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXML_Shop_Controller">
    <children>
       <GridPane prefHeight="560.0" prefWidth="876.0">
         <columnConstraints>
@@ -28,7 +31,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </JFXButton>
-                  <JFXTextField fx:id="fld_search" alignment="CENTER" layoutX="33.0" layoutY="96.0" maxWidth="497.0" minWidth="240.0" onAction="#OnActionFld_search" prefHeight="31.0" prefWidth="497.0" promptText="Пошук" />
+                  <JFXTextField fx:id="fld_search" alignment="CENTER" layoutX="33.0" layoutY="96.0" maxWidth="497.0" minWidth="240.0" onAction="#OnActionFld_search" onKeyPressed="#OnEnterPressed" prefHeight="31.0" prefWidth="497.0" promptText="Пошук" />
                   <JFXButton fx:id="b_search" layoutX="530.0" layoutY="90.0" onAction="#OnActionB_search" prefHeight="44.0" prefWidth="118.0" style="-fx-border-color: #000000; -fx-background-color: #ffff80;" text="Пошук" textAlignment="CENTER">
                      <font>
                         <Font size="18.0" />
