--- a/src/main/resources/FXMLAdd.fxml
+++ b/src/main/resources/FXMLAdd.fxml
@@ -7,49 +7,53 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="584.0" prefWidth="821.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXML_ADD_Controller">
+<AnchorPane fx:id="main_pain" prefHeight="584.0" prefWidth="821.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXML_ADD_Controller">
    <children>
-      <ComboBox layoutX="283.0" layoutY="60.0" prefWidth="150.0" />
+      <ComboBox fx:id="combo_categories" layoutX="283.0" layoutY="60.0" onAction="#OnAction_categories" prefWidth="150.0" />
       <Label layoutX="91.0" layoutY="64.0" text="Viberite tip novogo producta" />
-      <Label fx:id="label_name" layoutX="60.0" layoutY="128.0" text="Name" />
-      <Label fx:id="label_quntity" layoutX="60.0" layoutY="168.0" text="Quantity" />
-      <Label fx:id="label_desc" layoutX="60.0" layoutY="208.0" text="Description" />
-      <Label fx:id="label_price" layoutX="60.0" layoutY="248.0" text="Price" />
-      <Label fx:id="label_category" layoutX="60.0" layoutY="284.0" text="Category" />
-      <Label fx:id="label_guarantee" layoutX="60.0" layoutY="324.0" prefHeight="17.0" prefWidth="61.0" text="Guarantee" />
-      <Label fx:id="label_OS" layoutX="370.0" layoutY="128.0" text="Operatin system" />
-      <Label fx:id="label_CPU" layoutX="370.0" layoutY="168.0" text="CPU" />
-      <Label fx:id="label_RAM" layoutX="370.0" layoutY="208.0" text="RAM" />
-      <Label fx:id="label_diagonal" layoutX="370.0" layoutY="248.0" text="Diagonal" />
-      <Label fx:id="label_timework" layoutX="370.0" layoutY="288.0" text="Timework" />
-      <JFXTextField fx:id="field_name" layoutX="124.0" layoutY="124.0" />
-      <JFXTextField fx:id="field_quantity" layoutX="124.0" layoutY="164.0" />
-      <JFXTextField fx:id="field_desc" layoutX="124.0" layoutY="204.0" />
-      <JFXTextField fx:id="field_price" layoutX="124.0" layoutY="244.0" />
-      <JFXTextField fx:id="field_category" layoutX="124.0" layoutY="284.0" />
-      <JFXTextField fx:id="field_gurantee" layoutX="124.0" layoutY="324.0" />
-      <JFXTextField fx:id="field_os" layoutX="458.0" layoutY="128.0" />
-      <JFXTextField fx:id="field_cpu" layoutX="458.0" layoutY="168.0" />
-      <JFXTextField fx:id="field_ram" layoutX="458.0" layoutY="208.0" />
-      <JFXTextField fx:id="field_diagonal" layoutX="458.0" layoutY="248.0" />
-      <JFXTextField fx:id="field_timework" layoutX="458.0" layoutY="288.0" />
+      <Label fx:id="label_name" layoutX="60.0" layoutY="128.0" text="Name" visible="false" />
+      <Label fx:id="label_quntity" layoutX="60.0" layoutY="168.0" text="Quantity" visible="false" />
+      <Label fx:id="label_desc" layoutX="60.0" layoutY="208.0" text="Description" visible="false" />
+      <Label fx:id="label_price" layoutX="60.0" layoutY="248.0" text="Price" visible="false" />
+      <Label fx:id="label_category" layoutX="60.0" layoutY="284.0" text="Category" visible="false" />
+      <Label fx:id="label_guarantee" layoutX="60.0" layoutY="324.0" prefHeight="17.0" prefWidth="61.0" text="Guarantee" visible="false" />
+      <Label fx:id="label_OS" layoutX="370.0" layoutY="128.0" text="Operatin system" visible="false" />
+      <Label fx:id="label_CPU" layoutX="370.0" layoutY="168.0" text="CPU" visible="false" />
+      <Label fx:id="label_RAM" layoutX="370.0" layoutY="208.0" text="RAM" visible="false" />
+      <Label fx:id="label_diagonal" layoutX="370.0" layoutY="248.0" text="Diagonal" visible="false" />
+      <Label fx:id="label_timework" layoutX="370.0" layoutY="288.0" text="Timework" visible="false" />
+      <JFXTextField fx:id="field_name" layoutX="124.0" layoutY="124.0" visible="false" />
+      <JFXTextField fx:id="field_quantity" layoutX="124.0" layoutY="164.0" visible="false" />
+      <JFXTextField fx:id="field_desc" layoutX="124.0" layoutY="204.0" visible="false" />
+      <JFXTextField fx:id="field_price" layoutX="124.0" layoutY="244.0" visible="false" />
+      <JFXTextField fx:id="field_category" layoutX="124.0" layoutY="284.0" visible="false" />
+      <JFXTextField fx:id="field_gurantee" layoutX="124.0" layoutY="324.0" visible="false" />
+      <JFXTextField fx:id="field_os" layoutX="458.0" layoutY="128.0" visible="false" />
+      <JFXTextField fx:id="field_cpu" layoutX="458.0" layoutY="168.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="4" visible="false" />
+      <JFXTextField fx:id="field_ram" layoutX="458.0" layoutY="208.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="12" visible="false" />
+      <JFXTextField fx:id="field_diagonal" layoutX="458.0" layoutY="248.0" visible="false" />
+      <JFXTextField fx:id="field_timework" layoutX="458.0" layoutY="288.0" visible="false" />
       <JFXButton buttonType="RAISED" layoutX="458.0" layoutY="500.0" onAction="#onAction_Button_OK" prefHeight="46.0" prefWidth="106.0" style="-fx-background-color: #e6ffe6;" text="Add" />
       <JFXButton buttonType="RAISED" layoutX="656.0" layoutY="500.0" onAction="#OnAction_Button_Cancel" prefHeight="46.0" prefWidth="106.0" style="-fx-background-color: #ffeee6;" text="Cancel" />
-      <Label fx:id="label_cpu_gp" layoutX="370.0" layoutY="328.0" text="CPU GP" />
-      <JFXTextField fx:id="field_cpugp" layoutX="458.0" layoutY="328.0" />
-      <Label fx:id="label_ram_gp" layoutX="60.0" layoutY="364.0" prefHeight="17.0" prefWidth="61.0" text="RAM GP" />
-      <JFXTextField fx:id="field_ramgp" layoutX="124.0" layoutY="364.0" />
-      <Label fx:id="label_cpu_gp1" layoutX="370.0" layoutY="368.0" text="Dateterm" />
-      <JFXTextField fx:id="field_dateterm" layoutX="458.0" layoutY="368.0" />
-      <Label fx:id="label_sort" layoutX="60.0" layoutY="404.0" prefHeight="17.0" prefWidth="61.0" text="Sort" />
-      <JFXTextField fx:id="field_sort" layoutX="124.0" layoutY="404.0" />
-      <Label fx:id="label_brend" layoutX="370.0" layoutY="408.0" text="Brend" />
-      <JFXTextField fx:id="field_brend" layoutX="458.0" layoutY="408.0" />
-      <Label fx:id="label_creationdate" layoutX="60.0" layoutY="444.0" prefHeight="17.0" prefWidth="61.0" text="Creationdate">
+      <Label fx:id="label_cpu_gp" layoutX="370.0" layoutY="328.0" text="CPU GP" visible="false" />
+      <JFXTextField fx:id="field_cpugp" layoutX="458.0" layoutY="328.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="2" visible="false" />
+      <Label fx:id="label_ram_gp" layoutX="60.0" layoutY="364.0" prefHeight="17.0" prefWidth="61.0" text="RAM GP" visible="false" />
+      <JFXTextField fx:id="field_ramgp" layoutX="124.0" layoutY="364.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="6" visible="false" />
+      <Label fx:id="label_cpu_gp1" layoutX="370.0" layoutY="368.0" text="Dateterm" visible="false" />
+      <JFXTextField fx:id="field_dateterm" layoutX="458.0" layoutY="368.0" visible="false" />
+      <Label fx:id="label_sort" layoutX="60.0" layoutY="404.0" prefHeight="17.0" prefWidth="61.0" text="Sort" visible="false" />
+      <JFXTextField fx:id="field_sort" layoutX="124.0" layoutY="404.0" visible="false" />
+      <Label fx:id="label_brend" layoutX="370.0" layoutY="408.0" text="Brend" visible="false" />
+      <JFXTextField fx:id="field_brend" layoutX="458.0" layoutY="408.0" visible="false" />
+      <Label fx:id="label_creationdate" layoutX="60.0" layoutY="444.0" prefHeight="17.0" prefWidth="61.0" text="Creationdate" visible="false">
          <font>
             <Font size="10.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="field_creationdate" layoutX="124.0" layoutY="444.0" />
+      <JFXTextField fx:id="field_creationdate" layoutX="124.0" layoutY="444.0" visible="false" />
+      <JFXTextField fx:id="field_ram2" layoutX="544.0" layoutY="208.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="DDR3" visible="false" />
+      <JFXTextField fx:id="field_cpu2" layoutX="544.0" layoutY="168.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="1.2" visible="false" />
+      <JFXTextField fx:id="field_ramgp2" layoutX="199.0" layoutY="364.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="GDDR5" visible="false" />
+      <JFXTextField fx:id="field_cpugp2" layoutX="534.0" layoutY="328.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="1.2" visible="false" />
    </children>
 </AnchorPane>
