--- a/src/main/resources/FXMLAdd.fxml
+++ b/src/main/resources/FXMLAdd.fxml
@@ -3,14 +3,15 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="main_pain" prefHeight="584.0" prefWidth="821.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXML_ADD_Controller">
    <children>
-      <ComboBox fx:id="combo_categories" layoutX="283.0" layoutY="60.0" onAction="#OnAction_categories" prefWidth="150.0" />
-      <Label layoutX="91.0" layoutY="64.0" text="Viberite tip novogo producta" />
+      <ComboBox fx:id="combo_categories" layoutX="283.0" layoutY="60.0" onAction="#OnAction_categories" prefWidth="150.0" promptText="Category" />
+      <Label fx:id="main_label" layoutX="91.0" layoutY="64.0" text="Viberite tip novogo producta" />
       <Label fx:id="label_name" layoutX="60.0" layoutY="128.0" text="Name" visible="false" />
       <Label fx:id="label_quntity" layoutX="60.0" layoutY="168.0" text="Quantity" visible="false" />
       <Label fx:id="label_desc" layoutX="60.0" layoutY="208.0" text="Description" visible="false" />
@@ -26,21 +27,20 @@
       <JFXTextField fx:id="field_quantity" layoutX="124.0" layoutY="164.0" visible="false" />
       <JFXTextField fx:id="field_desc" layoutX="124.0" layoutY="204.0" visible="false" />
       <JFXTextField fx:id="field_price" layoutX="124.0" layoutY="244.0" visible="false" />
-      <JFXTextField fx:id="field_category" layoutX="124.0" layoutY="284.0" visible="false" />
+      <JFXTextField fx:id="field_category" editable="false" layoutX="124.0" layoutY="284.0" visible="false" />
       <JFXTextField fx:id="field_gurantee" layoutX="124.0" layoutY="324.0" visible="false" />
       <JFXTextField fx:id="field_os" layoutX="458.0" layoutY="128.0" visible="false" />
       <JFXTextField fx:id="field_cpu" layoutX="458.0" layoutY="168.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="4" visible="false" />
       <JFXTextField fx:id="field_ram" layoutX="458.0" layoutY="208.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="12" visible="false" />
       <JFXTextField fx:id="field_diagonal" layoutX="458.0" layoutY="248.0" visible="false" />
       <JFXTextField fx:id="field_timework" layoutX="458.0" layoutY="288.0" visible="false" />
-      <JFXButton buttonType="RAISED" layoutX="458.0" layoutY="500.0" onAction="#onAction_Button_OK" prefHeight="46.0" prefWidth="106.0" style="-fx-background-color: #e6ffe6;" text="Add" />
-      <JFXButton buttonType="RAISED" layoutX="656.0" layoutY="500.0" onAction="#OnAction_Button_Cancel" prefHeight="46.0" prefWidth="106.0" style="-fx-background-color: #ffeee6;" text="Cancel" />
+      <JFXButton fx:id="Add_button" buttonType="RAISED" layoutX="458.0" layoutY="500.0" onAction="#onAction_Button_OK" prefHeight="46.0" prefWidth="106.0" style="-fx-background-color: #e6ffe6;" text="Add" />
+      <JFXButton fx:id="Cancel_button" buttonType="RAISED" layoutX="656.0" layoutY="500.0" onAction="#OnAction_Button_Cancel" prefHeight="46.0" prefWidth="106.0" style="-fx-background-color: #ffeee6;" text="Cancel" />
       <Label fx:id="label_cpu_gp" layoutX="370.0" layoutY="328.0" text="CPU GP" visible="false" />
       <JFXTextField fx:id="field_cpugp" layoutX="458.0" layoutY="328.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="2" visible="false" />
       <Label fx:id="label_ram_gp" layoutX="60.0" layoutY="364.0" prefHeight="17.0" prefWidth="61.0" text="RAM GP" visible="false" />
       <JFXTextField fx:id="field_ramgp" layoutX="124.0" layoutY="364.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="6" visible="false" />
-      <Label fx:id="label_cpu_gp1" layoutX="370.0" layoutY="368.0" text="Dateterm" visible="false" />
-      <JFXTextField fx:id="field_dateterm" layoutX="458.0" layoutY="368.0" visible="false" />
+      <Label fx:id="label_daterm" layoutX="370.0" layoutY="368.0" text="Dateterm" visible="false" />
       <Label fx:id="label_sort" layoutX="60.0" layoutY="404.0" prefHeight="17.0" prefWidth="61.0" text="Sort" visible="false" />
       <JFXTextField fx:id="field_sort" layoutX="124.0" layoutY="404.0" visible="false" />
       <Label fx:id="label_brend" layoutX="370.0" layoutY="408.0" text="Brend" visible="false" />
@@ -50,10 +50,15 @@
             <Font size="10.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="field_creationdate" layoutX="124.0" layoutY="444.0" visible="false" />
       <JFXTextField fx:id="field_ram2" layoutX="544.0" layoutY="208.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="DDR3" visible="false" />
       <JFXTextField fx:id="field_cpu2" layoutX="544.0" layoutY="168.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="1.2" visible="false" />
       <JFXTextField fx:id="field_ramgp2" layoutX="199.0" layoutY="364.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="GDDR5" visible="false" />
       <JFXTextField fx:id="field_cpugp2" layoutX="534.0" layoutY="328.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="1.2" visible="false" />
+      <Label fx:id="label_wcount" layoutX="370.0" layoutY="448.0" text="W_count" visible="false" />
+      <Label fx:id="label_ccount" layoutX="557.0" layoutY="448.0" text="C_count" visible="false" />
+      <JFXTextField fx:id="field_wcount" layoutX="418.0" layoutY="448.0" maxWidth="98.0" minWidth="52.0" prefHeight="31.0" prefWidth="98.0" visible="false" />
+      <JFXTextField fx:id="field_ccount" layoutX="607.0" layoutY="448.0" maxWidth="87.0" minWidth="52.0" prefHeight="31.0" prefWidth="87.0" visible="false" />
+      <DatePicker fx:id="field_creationdate" layoutX="127.0" layoutY="444.0" visible="false" />
+      <DatePicker fx:id="field_dateterm" layoutX="467.0" layoutY="369.0" visible="false" />
    </children>
 </AnchorPane>
