--- a/src/main/resources/FXMLAdd.fxml
+++ b/src/main/resources/FXMLAdd.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -29,7 +30,6 @@
       <JFXTextField fx:id="field_price" layoutX="124.0" layoutY="244.0" visible="false" />
       <JFXTextField fx:id="field_category" editable="false" layoutX="124.0" layoutY="284.0" visible="false" />
       <JFXTextField fx:id="field_gurantee" layoutX="124.0" layoutY="324.0" visible="false" />
-      <JFXTextField fx:id="field_os" layoutX="458.0" layoutY="128.0" visible="false" />
       <JFXTextField fx:id="field_cpu" layoutX="458.0" layoutY="168.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="4" visible="false" />
       <JFXTextField fx:id="field_ram" layoutX="458.0" layoutY="208.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="12" visible="false" />
       <JFXTextField fx:id="field_diagonal" layoutX="458.0" layoutY="248.0" visible="false" />
@@ -50,9 +50,7 @@
             <Font size="10.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="field_ram2" layoutX="544.0" layoutY="208.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="DDR3" visible="false" />
       <JFXTextField fx:id="field_cpu2" layoutX="544.0" layoutY="168.0" maxWidth="73.0" minWidth="73.0" prefHeight="31.0" prefWidth="73.0" promptText="1.2" visible="false" />
-      <JFXTextField fx:id="field_ramgp2" layoutX="199.0" layoutY="364.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="GDDR5" visible="false" />
       <JFXTextField fx:id="field_cpugp2" layoutX="534.0" layoutY="328.0" maxWidth="73.0" minWidth="61.0" prefHeight="31.0" prefWidth="73.0" promptText="1.2" visible="false" />
       <Label fx:id="label_wcount" layoutX="370.0" layoutY="448.0" text="W_count" visible="false" />
       <Label fx:id="label_ccount" layoutX="557.0" layoutY="448.0" text="C_count" visible="false" />
@@ -60,5 +58,8 @@
       <JFXTextField fx:id="field_ccount" layoutX="607.0" layoutY="448.0" maxWidth="87.0" minWidth="52.0" prefHeight="31.0" prefWidth="87.0" visible="false" />
       <DatePicker fx:id="field_creationdate" layoutX="127.0" layoutY="444.0" visible="false" />
       <DatePicker fx:id="field_dateterm" layoutX="467.0" layoutY="369.0" visible="false" />
+      <JFXComboBox fx:id="combo_OS" layoutX="458.0" layoutY="128.0" prefHeight="25.0" prefWidth="149.0" visible="false" />
+      <JFXComboBox fx:id="field_ram2" layoutX="543.0" layoutY="211.0" prefHeight="25.0" prefWidth="73.0" visible="false" />
+      <JFXComboBox fx:id="field_ramgp2" layoutX="205.0" layoutY="367.0" prefHeight="25.0" prefWidth="73.0" visible="false" />
    </children>
 </AnchorPane>
